Update TileManager.java